--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -107,7 +107,7 @@
     <p>&copy; 2025 Vireo Energy Pty Ltd. All rights reserved.</p>
     <p>
       <a href="terms-of-service.html">Terms of Service</a> |
-      <a href="privacy-policy.html">Privacy Policy</a>
+      <a href="https://vireoenergy.github.io/legal/privacy-policy.html">Privacy Policy</a>
     </p>
   </footer>
 
