--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -46,7 +46,7 @@
 </head>
 <body>
   <h1>Run on Sun – Terms of Service</h1>
-  <p><strong>Effective date:</strong> [Insert Date]</p>
+  <p><strong>Effective date:</strong> 10 November 2026</p>
 
   <h2>1. Purpose of the App</h2>
   <p><em>Run on Sun</em> is operated by Vireo Energy Pty Ltd (“we”, “our”, or “us”). The App provides solar forecasting and appliance scheduling tools to help users align energy use with solar generation. The App is for informational and educational purposes only and should not be relied upon for operational, financial, or safety-critical decisions.</p>
