--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -39,7 +39,7 @@
 <body>
 
   <h1>Privacy Policy</h1>
-  <p><strong>Effective Date:</strong> January 2025</p>
+  <p><strong>Effective Date:</strong> 10 November 2025</p>
   <p>
     Run on Sun (“the App”, “we”, “our”, “us”) is developed by Vireo Energy Pty Ltd. 
     This Privacy Policy explains how we collect, use, and protect your information when you use the Run on Sun mobile application.
