Add device region information to privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -217,6 +217,12 @@
             <td>Used locally; may be sent to reverse geocoding provider via <code>Accept-Language</code>.</td>
           </tr>
           <tr>
+            <td class="k">Device region</td>
+            <td>Region setting (e.g. country code such as AU, BR)</td>
+            <td>Set default currency for energy costs and savings so prices match your region</td>
+            <td>Used only on your device. Not sent to our servers or used to identify you.</td>
+          </tr>
+          <tr>
             <td class="k">App content (local)</td>
             <td>Appliance names, schedules, run history, savings estimates</td>
             <td>Provide the app’s features</td>
