Revise support page content to clarify user feedback request regarding forecast discrepancies. Emphasize the importance of sending screenshots and configuration details to enhance forecasting accuracy.

--- a/support.html
+++ b/support.html
@@ -531,7 +531,7 @@
 
           <p style="margin-top: 1rem;">Still unsure about a setting? Check your solar installer's paperwork or your inverter's display/app.</p>
 
-          <p style="margin-top: 1.5rem;">Send us screenshots of your solar app and screenshots of OnSun: contact, your configurations in the app, and location. This will help us understand how to help improve the app and advise on getting the best forecast for you.</p>
+          <p style="margin-top: 1.5rem;"><strong>Is the forecast significantly off?</strong> If your actual solar production is consistently very different from what OnSun predicts, we'd like to hear from you. Send us screenshots of your solar app alongside OnSun's forecast, along with your configuration details and location. This data helps us improve the forecasting model.</p>
         </div>
 
         <div class="faq-item">
