Update contact information in privacy policy, support page, and terms of service to reflect new email address. Add FAQ section on forecast intervals in support page for enhanced user understanding.

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -319,7 +319,7 @@
       <section>
         <h2>Data subject rights</h2>
         <p>
-          Depending on your jurisdiction, you may have rights (e.g. access, correction, erasure, objection, complaint to a supervisory authority). To exercise them or for questions, contact us at contact@vireo.energy. Data stored only on your device can be removed by deleting the app.
+          Depending on your jurisdiction, you may have rights (e.g. access, correction, erasure, objection, complaint to a supervisory authority). To exercise them or for questions, contact us at onsun.team@outlook.com. Data stored only on your device can be removed by deleting the app.
         </p>
       </section>
 
@@ -358,7 +358,7 @@
         <h2>Contact</h2>
         <p>
           If you have questions about this Privacy Policy, contact us at
-          contact@vireo.energy.
+          onsun.team@outlook.com.
         </p>
       </section>
 
