--- a/support.html
+++ b/support.html
@@ -351,13 +351,13 @@
       <div class="feedback-box" role="note">
         <h2>We're Here to Improve</h2>
         <p>We're constantly working to make OnSun better for you. If the forecasting isn't quite right for your location, if the scheduling logic could be refined, or if you have ideas for new features — we'd love to hear from you.</p>
-        <p>Your feedback helps us build a smarter, more useful app. Please don't hesitate to reach out at <a href="mailto:contact@vireo.energy">contact@vireo.energy</a> with any suggestions or issues you encounter.</p>
+        <p>Your feedback helps us build a smarter, more useful app. Please don't hesitate to reach out at <a href="mailto:onsun.team@outlook.com">onsun.team@outlook.com</a> with any suggestions or issues you encounter.</p>
       </div>
 
       <section>
         <h2>Contact Us</h2>
         <p>Have a question or need assistance? We're here to help.</p>
-        <a href="mailto:contact@vireo.energy" class="contact-link">contact@vireo.energy</a>
+        <a href="mailto:onsun.team@outlook.com" class="contact-link">onsun.team@outlook.com</a>
       </section>
 
       <section>
@@ -366,6 +366,13 @@
         <div class="faq-item">
           <h3>How do forecasts work?</h3>
           <p>OnSun uses weather data and solar forecasting algorithms to estimate your solar generation throughout the day. Forecasts consider factors like cloud cover, time of year, and your location. Because solar generation depends on many uncontrollable factors—such as weather, shading, and system performance—forecasts are estimates only and real-world results may differ.</p>
+        </div>
+
+        <div class="faq-item">
+          <h3>What forecast interval does OnSun use?</h3>
+          <p>OnSun's forecasting models analyse weather and solar radiation data to estimate your solar generation. The time resolution of your forecast depends on your location.</p>
+          <p>In most regions, forecasts are provided in hourly intervals. In areas with higher-resolution meteorological coverage, our models can produce more granular 15-minute interval forecasts. Your location therefore determines the time step resolution you see in the app.</p>
+          <p>OnSun automatically uses the highest resolution available for your region to give you the most accurate forecast possible.</p>
         </div>
 
         <div class="faq-item">
