--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -238,7 +238,7 @@
 
       <section>
         <h2>17. Contact</h2>
-        <p>If you have any questions about these Terms, contact us at contact@vireo.energy.</p>
+        <p>If you have any questions about these Terms, contact us at onsun.team@outlook.com.</p>
       </section>
 
       <div class="footer" role="contentinfo">
