Update privacy policy and terms of service to clarify operational details and contact information. Enhance support page with new FAQ section on block load profiles for improved user understanding.

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -159,7 +159,7 @@
         <span class="app-name">OnSun</span>
       </div>
       <h1>Privacy Policy</h1>
-      <p class="sub">OnSun (“the App”) by Vireo Energy Pty Ltd • Effective date: 16 February 2026</p>
+      <p class="sub">OnSun (“the App”) is operated by Vireo Energy Pty Ltd under licence from Adaptive Energy Group Pty Ltd • Effective date: 16 February 2026</p>
     </header>
 
     <main role="main">
@@ -167,7 +167,7 @@
         <h2>Overview</h2>
         <p>
           OnSun helps you plan appliance usage around expected solar production.
-          The app is designed to run primarily on your device. We do not provide user accounts and we do not build behavioural profiles.
+          The app is designed to run primarily on your device. We do not provide user accounts and we do not build behavioural profiles for advertising or tracking purposes.
         </p>
         <p class="muted">
           If you are reviewing this for App Store / Google Play disclosure: the primary data processed externally is your <span class="k">location coordinates</span> (to fetch forecasts),
@@ -285,7 +285,7 @@
       <section>
         <h2>International transfers</h2>
         <p>
-          Your data may be transferred to, stored in, or processed in countries outside your country of residence. Our forecast and reverse-geocoding providers (and their subprocessors) may operate in multiple jurisdictions. Where we transfer data from the UK or EEA to countries not deemed to provide adequate protection, we rely on appropriate safeguards such as Standard Contractual Clauses (SCCs) or equivalent mechanisms where required by law.
+          Your data may be transferred to, stored in, or processed in countries outside your country of residence. Our forecast and reverse-geocoding providers (and their subprocessors) may operate in multiple jurisdictions. Where we transfer data from the UK or EEA to countries not deemed to provide adequate protection, we rely on appropriate safeguards provided by those service providers, including Standard Contractual Clauses (SCCs) or equivalent mechanisms where required by law.
         </p>
         <p class="muted">
           We minimise data sent to third parties (e.g. coordinates and minimal identifiers) and do not transfer your personal data for purposes other than providing and securing the app.
@@ -319,7 +319,7 @@
       <section>
         <h2>Data subject rights</h2>
         <p>
-          Depending on your jurisdiction, you may have rights (e.g. access, correction, erasure, objection, complaint to a supervisory authority). To exercise them or for questions, contact us at onsun.team@outlook.com. Data stored only on your device can be removed by deleting the app.
+          Depending on your jurisdiction, you may have rights (e.g. access, correction, erasure, objection, complaint to a supervisory authority). To exercise them or for questions, contact us at contact@vireo.energy. Data stored only on your device can be removed by deleting the app.
         </p>
       </section>
 
@@ -358,7 +358,7 @@
         <h2>Contact</h2>
         <p>
           If you have questions about this Privacy Policy, contact us at
-          onsun.team@outlook.com.
+          contact@vireo.energy.
         </p>
       </section>
 
