--- a/support.html
+++ b/support.html
@@ -351,13 +351,13 @@
       <div class="feedback-box" role="note">
         <h2>We're Here to Improve</h2>
         <p>We're constantly working to make OnSun better for you. If the forecasting isn't quite right for your location, if the scheduling logic could be refined, or if you have ideas for new features — we'd love to hear from you.</p>
-        <p>Your feedback helps us build a smarter, more useful app. Please don't hesitate to reach out at <a href="mailto:onsun.team@outlook.com">onsun.team@outlook.com</a> with any suggestions or issues you encounter.</p>
+        <p>Your feedback helps us build a smarter, more useful app. Please don't hesitate to reach out at <a href="mailto:contact@vireo.energy">contact@vireo.energy</a> with any suggestions or issues you encounter.</p>
       </div>
 
       <section>
         <h2>Contact Us</h2>
         <p>Have a question or need assistance? We're here to help.</p>
-        <a href="mailto:onsun.team@outlook.com" class="contact-link">onsun.team@outlook.com</a>
+        <a href="mailto:contact@vireo.energy" class="contact-link">contact@vireo.energy</a>
       </section>
 
       <section>
@@ -574,6 +574,14 @@
               <button onclick="searchLatLong()" class="latlong-btn">Go</button>
             </div>
           </div>
+        </div>
+
+        <div class="faq-item">
+          <h3>Block load profiles</h3>
+          <p>OnSun uses simplified appliance load profiles to make solar scheduling straightforward. Real-world appliances often have variable power draw—heating elements cycle on and off, motors ramp up, and rinse cycles use less power than wash cycles.</p>
+          <p>While "block" or variable profiles don't perfectly match our steady-state estimates, every appliance behaves differently. Modeling each unique profile would create an overly complex experience that detracts from OnSun's core purpose: helping you align appliance usage with your solar generation.</p>
+          <p>Our scheduler treats the total energy needed as a flexible block that fits within your solar window. This approach works well for most households regardless of internal power variations.</p>
+          <p>If you need detailed block-profile scheduling (for example, to avoid peak tariff periods or coordinate with home battery cycling), please contact us. Our app architecture supports this feature, and we'd welcome your feedback to prioritise it.</p>
         </div>
       </section>
 
