--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -136,7 +136,7 @@
         <span class="app-name">OnSun</span>
       </div>
       <h1>Terms of Service</h1>
-      <p class="sub">OnSun (“the App”) by Vireo Energy Pty Ltd • Effective date: 10 November 2026</p>
+      <p class="sub">OnSun (“the App”) is operated by Vireo Energy Pty Ltd under licence from Adaptive Energy Group Pty Ltd • Effective date: 10 November 2026</p>
     </header>
 
     <main role="main">
@@ -179,6 +179,7 @@
       <section>
         <h2>8. User responsibilities</h2>
         <p>You are responsible for ensuring your site details and appliance settings are accurate. The App may provide recommendations, but you make the final decisions about when and how to operate your appliances. The App does not directly control equipment unless explicitly stated for compatible devices.</p>
+        <p><strong>Appliance consumption estimates (block profiles).</strong> The App uses simplified "block load profiles" to estimate when and how much power your appliances consume. A block profile is an approximation—a stepped representation of power draw over time—not a precise real-time measurement of your specific appliance. These profiles are built from typical usage patterns and publicly available manufacturer specifications, but <strong>they are estimates only</strong>. Your actual appliance may have variable load cycles, different power draws, or efficiency ratings that differ from the profile used. Consumption may be significantly over or under estimated depending on your specific appliance model, age, settings, load size, and operating conditions. We do not guarantee the accuracy of these estimates and recommend users verify consumption against their own utility data or smart metering where available.</p>
       </section>
 
       <section>
@@ -223,7 +224,8 @@
 
       <section>
         <h2>14. Intellectual property</h2>
-        <p>The App and its content (including design, text, and software, but excluding third-party data and materials) are owned by Vireo Energy Pty Ltd or our licensors. Third-party trademarks, data, and content belong to their respective owners. You do not acquire any rights in our or third-party IP by using the App.</p>
+        <p>The App and its content (including design, text, software, and underlying intellectual property, excluding third-party data and materials) are owned by Adaptive Energy Group Pty Ltd or its licensors and are licensed to Vireo Energy Pty Ltd for operation and distribution.</p>
+        <p>Vireo Energy Pty Ltd operates and distributes the App under licence. Third-party trademarks, data, and content belong to their respective owners. You do not acquire any rights in our or third-party intellectual property by using the App.</p>
       </section>
 
       <section>
@@ -238,7 +240,7 @@
 
       <section>
         <h2>17. Contact</h2>
-        <p>If you have any questions about these Terms, contact us at onsun.team@outlook.com.</p>
+        <p>If you have any questions about these Terms, contact us at contact@vireo.energy.</p>
       </section>
 
       <div class="footer" role="contentinfo">
