Enhance privacy policy, support page, and terms of service with updated contact information and new contact button styling. Replace old email addresses with a unified contact link for improved user communication.

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -138,6 +138,23 @@
     .footer a {
       color: #9ca3af;
     }
+
+    .contact-btn {
+      display: inline-block;
+      margin: 0.5rem 0;
+      padding: 0.5rem 1rem;
+      background: rgba(255, 255, 255, 0.08);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      border-radius: 8px;
+      color: #FFFFFF;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .contact-btn:hover {
+      background: rgba(255, 255, 255, 0.15);
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
@@ -319,7 +336,7 @@
       <section>
         <h2>Data subject rights</h2>
         <p>
-          Depending on your jurisdiction, you may have rights (e.g. access, correction, erasure, objection, complaint to a supervisory authority). To exercise them or for questions, contact us at contact@vireo.energy. Data stored only on your device can be removed by deleting the app.
+          Depending on your jurisdiction, you may have rights (e.g. access, correction, erasure, objection, complaint to a supervisory authority). To exercise them or for questions, <a href="mailto:onsun.team@outlook.com" class="contact-btn">Contact us</a>. Data stored only on your device can be removed by deleting the app.
         </p>
       </section>
 
@@ -357,9 +374,9 @@
       <section>
         <h2>Contact</h2>
         <p>
-          If you have questions about this Privacy Policy, contact us at
-          contact@vireo.energy.
+          If you have questions about this Privacy Policy:
         </p>
+        <a href="mailto:onsun.team@outlook.com" class="contact-btn">Contact us</a>
       </section>
 
       <div class="footer" role="contentinfo">
