--- a/support.html
+++ b/support.html
@@ -351,13 +351,14 @@
       <div class="feedback-box" role="note">
         <h2>We're Here to Improve</h2>
         <p>We're constantly working to make OnSun better for you. If the forecasting isn't quite right for your location, if the scheduling logic could be refined, or if you have ideas for new features — we'd love to hear from you.</p>
-        <p>Your feedback helps us build a smarter, more useful app. Please don't hesitate to reach out at <a href="mailto:contact@vireo.energy">contact@vireo.energy</a> with any suggestions or issues you encounter.</p>
+        <p>Your feedback helps us build a smarter, more useful app. Please don't hesitate to reach out with any suggestions or issues you encounter.</p>
+        <a href="mailto:onsun.team@outlook.com" class="contact-link">Contact us</a>
       </div>
 
       <section>
         <h2>Contact Us</h2>
         <p>Have a question or need assistance? We're here to help.</p>
-        <a href="mailto:contact@vireo.energy" class="contact-link">contact@vireo.energy</a>
+        <a href="mailto:onsun.team@outlook.com" class="contact-link">Contact us</a>
       </section>
 
       <section>
