--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -115,6 +115,23 @@
     .footer a {
       color: #9ca3af;
     }
+
+    .contact-btn {
+      display: inline-block;
+      margin: 0.5rem 0;
+      padding: 0.5rem 1rem;
+      background: rgba(255, 255, 255, 0.08);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      border-radius: 8px;
+      color: #FFFFFF;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .contact-btn:hover {
+      background: rgba(255, 255, 255, 0.15);
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
@@ -240,7 +257,8 @@
 
       <section>
         <h2>17. Contact</h2>
-        <p>If you have any questions about these Terms, contact us at contact@vireo.energy.</p>
+        <p>If you have any questions about these Terms:</p>
+        <a href="mailto:onsun.team@outlook.com" class="contact-btn">Contact us</a>
       </section>
 
       <div class="footer" role="contentinfo">
